NetBSD Problem Report #48162

From www@NetBSD.org  Thu Aug 29 14:09:45 2013
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 7AC467050C
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 29 Aug 2013 14:09:45 +0000 (UTC)
Message-Id: <20130829140944.18CAA71B57@mollari.NetBSD.org>
Date: Thu, 29 Aug 2013 14:09:44 +0000 (UTC)
From: dennis.c.ferguson@gmail.com
Reply-To: dennis.c.ferguson@gmail.com
To: gnats-bugs@NetBSD.org
Subject: Typo in arm/omap/am335x_prcm.h AM335X_PRCM_CM_CLKSEL_DPLL_BYPASS definition
X-Send-Pr-Version: www-1.0

>Number:         48162
>Category:       port-arm
>Synopsis:       Typo in arm/omap/am335x_prcm.h AM335X_PRCM_CM_CLKSEL_DPLL_BYPASS definition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Aug 29 14:10:00 +0000 2013
>Closed-Date:    Thu Aug 29 15:51:04 +0000 2013
>Last-Modified:  Thu Aug 29 15:55:00 +0000 2013
>Originator:     Dennis Ferguson
>Release:        6.99.23
>Organization:
>Environment:
NetBSD beagle4.to.akit-ferguson.com 6.99.23 NetBSD 6.99.23 (BEAGLEBONE) #0: Fri Aug  2 02:14:24 EDT 2013  dennis@ts1.to.mistimed.ca:/usr/obj/sys/arch/evbarm/compile/BEAGLEBONE evbarm

>Description:
In sys/arch/arm/omap/am335x_prcm.h the definition of AM335X_PRCM_CM_CLKSEL_DPLL_BYPASS has a typo; it uses __BITS()
to define a single bit mask.
>How-To-Repeat:

>Fix:
Index: sys/arch/arm/omap/am335x_prcm.h
===================================================================
RCS file: /cvsroot/src/sys/arch/arm/omap/am335x_prcm.h,v
retrieving revision 1.5
diff -u -r1.5 am335x_prcm.h
--- sys/arch/arm/omap/am335x_prcm.h     29 Jun 2013 20:43:33 -0000      1.5
+++ sys/arch/arm/omap/am335x_prcm.h     29 Aug 2013 14:01:49 -0000
@@ -66,7 +66,7 @@
 #define  AM335X_PRCM_CM_IDLEST_DPLL_ST_DPLL_CLK_MN_BYPASS      __BIT(8)
 #define  AM335X_PRCM_CM_IDLEST_DPLL_ST_DPLL_CLK_LOCKED         __BIT(0)
 #define        AM335X_PRCM_CM_CLKSEL_DPLL_MPU  0x2c
-#define  AM335X_PRCM_CM_CLKSEL_DPLL_BYPASS     __BITS(23)
+#define  AM335X_PRCM_CM_CLKSEL_DPLL_BYPASS     __BIT(23)
 #define  AM335X_PRCM_CM_CLKSEL_DPLL_MULT       __BITS(18,8)
 #define  AM335X_PRCM_CM_CLKSEL_DPLL_DIV                __BITS(6,0)
 #define        AM335X_PRCM_CM_CLKMODE_DPLL_MPU 0x88

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: riz@NetBSD.org
State-Changed-When: Thu, 29 Aug 2013 15:51:04 +0000
State-Changed-Why:
Fix applied, thanks!


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48162 CVS commit: src/sys/arch/arm/omap
Date: Thu, 29 Aug 2013 15:50:41 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Thu Aug 29 15:50:41 UTC 2013

 Modified Files:
 	src/sys/arch/arm/omap: am335x_prcm.h

 Log Message:
 Use __BIT(), not __BITS() to define a single-bit mask.
 From Dennis Ferguson in PR#48162.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/sys/arch/arm/omap/am335x_prcm.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.