Use __BIT(), not __BITS() to define a single-bit mask. From Dennis Ferguson in PR#48162.